--- a/DMSDriver/DMSDriver/App/RouteListVC/Cell/tableViewCell/RouteTableViewCell.xib
+++ b/DMSDriver/DMSDriver/App/RouteListVC/Cell/tableViewCell/RouteTableViewCell.xib
@@ -275,10 +275,10 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="93.5" height="182.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="route_list_wait" translatesAutoresizingMaskIntoConstraints="NO" id="8DX-5R-HxF">
-                                                        <rect key="frame" x="39" y="10" width="15.5" height="20.5"/>
+                                                        <rect key="frame" x="39" y="10" width="15.5" height="22"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="3 HOURS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NgX-J5-3kp">
-                                                        <rect key="frame" x="4" y="40.5" width="85.5" height="16.5"/>
+                                                        <rect key="frame" x="4" y="42" width="85.5" height="16.5"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <color key="textColor" red="0.27058823529999998" green="0.30980392159999998" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -299,10 +299,13 @@
                                                 <rect key="frame" x="93.5" y="0.0" width="93" height="182.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="route_list_km" translatesAutoresizingMaskIntoConstraints="NO" id="YWq-ee-1tE">
-                                                        <rect key="frame" x="32.5" y="10" width="28.5" height="16.5"/>
+                                                        <rect key="frame" x="27.5" y="10" width="38.5" height="22"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="YWq-ee-1tE" secondAttribute="height" multiplier="7:4" id="ZhB-vS-1aa"/>
+                                                        </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="250 KM" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KjY-SX-SFG">
-                                                        <rect key="frame" x="4" y="36.5" width="85" height="16.5"/>
+                                                        <rect key="frame" x="4" y="42" width="85" height="16.5"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <color key="textColor" red="0.27058823529999998" green="0.30980392159999998" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -344,6 +347,10 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="8DX-5R-HxF" firstAttribute="height" secondItem="tPE-AQ-ghH" secondAttribute="height" id="HBb-g2-eMM"/>
+                                            <constraint firstItem="YWq-ee-1tE" firstAttribute="height" secondItem="8DX-5R-HxF" secondAttribute="height" id="cWg-9E-Osl"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
