--- a/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/ReturnedItem.storyboard
@@ -166,7 +166,7 @@
                                                             </constraints>
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Pc-LV-Y5s">
-                                                            <rect key="frame" x="15" y="255" width="70" height="26"/>
+                                                            <rect key="frame" x="15" y="265" width="70" height="26"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="26" id="2yF-HP-hK6"/>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="Zeh-jb-HMw"/>
@@ -177,14 +177,14 @@
                                                             </state>
                                                         </button>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_time" translatesAutoresizingMaskIntoConstraints="NO" id="pfd-4a-ouW">
-                                                            <rect key="frame" x="95" y="263" width="10" height="10"/>
+                                                            <rect key="frame" x="95" y="273" width="10" height="10"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="10" id="8PD-rG-0Bq"/>
                                                                 <constraint firstAttribute="width" secondItem="pfd-4a-ouW" secondAttribute="height" id="z5A-p5-NSZ"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XvI-B1-1lk">
-                                                            <rect key="frame" x="115" y="260" width="34.5" height="16"/>
+                                                            <rect key="frame" x="115" y="270" width="34.5" height="16"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -416,7 +416,7 @@
                                                         <constraint firstItem="pfd-4a-ouW" firstAttribute="leading" secondItem="2Pc-LV-Y5s" secondAttribute="trailing" constant="10" id="HBD-Tr-3Zn"/>
                                                         <constraint firstItem="pfd-4a-ouW" firstAttribute="width" secondItem="pfd-4a-ouW" secondAttribute="height" id="J5H-pf-adh"/>
                                                         <constraint firstItem="vRC-kN-AFW" firstAttribute="top" secondItem="QMS-Y2-Iek" secondAttribute="bottom" id="LzG-UO-YYg"/>
-                                                        <constraint firstItem="2Pc-LV-Y5s" firstAttribute="top" secondItem="vRC-kN-AFW" secondAttribute="bottom" id="QTP-jZ-hdP"/>
+                                                        <constraint firstItem="2Pc-LV-Y5s" firstAttribute="top" secondItem="vRC-kN-AFW" secondAttribute="bottom" constant="10" id="QTP-jZ-hdP"/>
                                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XvI-B1-1lk" secondAttribute="trailing" constant="15" id="Tg3-tZ-vHP"/>
                                                         <constraint firstItem="pfd-4a-ouW" firstAttribute="centerY" secondItem="2Pc-LV-Y5s" secondAttribute="centerY" id="U7A-OG-b4R"/>
                                                         <constraint firstItem="QMS-Y2-Iek" firstAttribute="top" secondItem="dKJ-DQ-X6b" secondAttribute="top" id="UN8-iP-a2h"/>
@@ -440,7 +440,7 @@
                                             <constraint firstItem="dKJ-DQ-X6b" firstAttribute="leading" secondItem="Tax-5T-5Tv" secondAttribute="leading" constant="10" id="Tba-5l-2Fu"/>
                                             <constraint firstItem="dKJ-DQ-X6b" firstAttribute="top" secondItem="Tax-5T-5Tv" secondAttribute="top" constant="10" id="adJ-Mq-VHr"/>
                                         </constraints>
-                                        <size key="customSize" width="374" height="311"/>
+                                        <size key="customSize" width="374" height="321"/>
                                         <connections>
                                             <outlet property="btnNumber" destination="go4-Fm-kKU" id="MY5-MO-hSA"/>
                                             <outlet property="btnStatus" destination="2Pc-LV-Y5s" id="GZe-Se-taK"/>
