[Order Detail] Fix shortcutUpdateStatus button show "Delivery" when hidden

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -1189,8 +1189,8 @@
                                                     <rect key="frame" x="15" y="0.0" width="290" height="160"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzC-T5-gdk">
-                                                            <rect key="frame" x="0.0" y="0.0" width="140" height="160"/>
-                                                            <state key="normal" title="Delivery">
+                                                            <rect key="frame" x="0.0" y="0.0" width="167.5" height="160"/>
+                                                            <state key="normal">
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </state>
                                                             <userDefinedRuntimeAttributes>
