--- a/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
+++ b/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
@@ -15,8 +15,10 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReasonSkipView" customModule="DMSDriver" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReasonSkipView" customModule="Ashdod_Dev" customModuleProvider="target">
             <connections>
+                <outlet property="noteTextView" destination="DUw-Bu-BeK" id="cea-S8-CCF"/>
+                <outlet property="okButton" destination="Otk-7j-Q64" id="UoM-ud-Aep"/>
                 <outlet property="tableView" destination="tbc-eE-uCE" id="9KP-Wc-F4g"/>
             </connections>
         </placeholder>
@@ -30,7 +32,7 @@
                     <color key="backgroundColor" red="0.1647058824" green="0.18039215689999999" blue="0.26274509800000001" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Rl-yi-nIS">
-                    <rect key="frame" x="172.5" y="606" width="30" height="30"/>
+                    <rect key="frame" x="172.5" y="610" width="30" height="26"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                     <state key="normal" title="Back">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -75,24 +77,56 @@
                             </connections>
                         </button>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tbc-eE-uCE">
-                            <rect key="frame" x="20" y="66" width="287" height="341"/>
+                            <rect key="frame" x="20" y="66" width="287" height="211"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <outlet property="dataSource" destination="-1" id="kmX-Hu-nLw"/>
                                 <outlet property="delegate" destination="-1" id="awJ-Gf-I4r"/>
                             </connections>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Ci-Nx-E2H">
+                            <rect key="frame" x="20" y="287" width="287" height="120"/>
+                            <subviews>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DUw-Bu-BeK">
+                                    <rect key="frame" x="10" y="10" width="267" height="110"/>
+                                    <color key="backgroundColor" red="0.20784313725490194" green="0.22745098039215686" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Add note"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </textView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="DUw-Bu-BeK" secondAttribute="trailing" constant="10" id="0mj-Jh-jVr"/>
+                                <constraint firstItem="DUw-Bu-BeK" firstAttribute="top" secondItem="1Ci-Nx-E2H" secondAttribute="top" constant="10" id="7mh-AN-cQm"/>
+                                <constraint firstItem="DUw-Bu-BeK" firstAttribute="leading" secondItem="1Ci-Nx-E2H" secondAttribute="leading" constant="10" id="V4n-j8-g6d"/>
+                                <constraint firstAttribute="bottom" secondItem="DUw-Bu-BeK" secondAttribute="bottom" id="nwf-K6-xNT"/>
+                                <constraint firstAttribute="height" constant="120" id="zr3-QQ-BRa"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.16470588235294117" green="0.1803921568627451" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="tbc-eE-uCE" secondAttribute="trailing" constant="20" id="2TG-GG-mu9"/>
+                        <constraint firstAttribute="trailing" secondItem="1Ci-Nx-E2H" secondAttribute="trailing" constant="20" id="2XQ-OK-tbo"/>
                         <constraint firstItem="tbc-eE-uCE" firstAttribute="top" secondItem="1eb-Ax-1gc" secondAttribute="bottom" constant="20" id="4wd-rO-6Yx"/>
                         <constraint firstItem="tbc-eE-uCE" firstAttribute="leading" secondItem="bko-MR-eUC" secondAttribute="leading" constant="20" id="OiB-xs-zaC"/>
                         <constraint firstItem="1eb-Ax-1gc" firstAttribute="top" secondItem="bko-MR-eUC" secondAttribute="top" constant="20" id="Qjm-bo-PCx"/>
                         <constraint firstItem="1eb-Ax-1gc" firstAttribute="centerX" secondItem="bko-MR-eUC" secondAttribute="centerX" id="RRF-va-r5o"/>
+                        <constraint firstItem="1Ci-Nx-E2H" firstAttribute="leading" secondItem="bko-MR-eUC" secondAttribute="leading" constant="20" id="SJZ-Lr-sPs"/>
                         <constraint firstAttribute="bottom" secondItem="Otk-7j-Q64" secondAttribute="bottom" constant="25" id="UUR-Yf-JcB"/>
+                        <constraint firstItem="Otk-7j-Q64" firstAttribute="top" secondItem="1Ci-Nx-E2H" secondAttribute="bottom" constant="20" id="UbB-jj-Smr"/>
                         <constraint firstItem="Otk-7j-Q64" firstAttribute="width" secondItem="bko-MR-eUC" secondAttribute="width" multiplier="1:2" id="ZJW-xZ-7Mk"/>
-                        <constraint firstItem="Otk-7j-Q64" firstAttribute="top" secondItem="tbc-eE-uCE" secondAttribute="bottom" constant="20" id="avr-Ab-UFk"/>
+                        <constraint firstItem="1Ci-Nx-E2H" firstAttribute="top" secondItem="tbc-eE-uCE" secondAttribute="bottom" constant="10" id="Zbd-uC-Q9i"/>
                         <constraint firstItem="Otk-7j-Q64" firstAttribute="centerX" secondItem="bko-MR-eUC" secondAttribute="centerX" id="cYK-oB-xgl"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -106,7 +140,6 @@
             <constraints>
                 <constraint firstItem="hU7-QT-m5f" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2gF-eg-ViH"/>
                 <constraint firstItem="hU7-QT-m5f" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="FHA-1F-qvu"/>
-                <constraint firstItem="3Rl-yi-nIS" firstAttribute="top" secondItem="bko-MR-eUC" secondAttribute="bottom" constant="30" id="FVa-oI-vp0"/>
                 <constraint firstItem="hU7-QT-m5f" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Hpv-cc-EvE"/>
                 <constraint firstItem="3Rl-yi-nIS" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="KH7-3f-NZz"/>
                 <constraint firstItem="bko-MR-eUC" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="OMR-oF-RUb"/>
@@ -114,11 +147,12 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="3Rl-yi-nIS" secondAttribute="bottom" constant="20" id="hpf-2n-xqw"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="bko-MR-eUC" secondAttribute="trailing" constant="24" id="oZg-3D-TCp"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="hU7-QT-m5f" secondAttribute="bottom" id="tbV-0o-7JK"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="bko-MR-eUC" secondAttribute="bottom" constant="80" id="u1y-q6-hPn"/>
                 <constraint firstItem="bko-MR-eUC" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="wUo-jm-uoz"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="542" y="147"/>
+            <point key="canvasLocation" x="541.60000000000002" y="146.62668665667167"/>
         </view>
     </objects>
 </document>
